# snake_multiplayer

./: .dockerignore  .env.example  Dockerfile  README.md  digital_ocean_setup.history  docker-compose.yml  index.html  pyproject.toml  server.py
src/: connection_manager.py  constants.py  game.py  levels.py  main.py  models.py
static/css/: styles.css
static/js/: audio.js  constants.js  effects-settings.js  image-processor.js  main.js  networking.js  rendering.js  state.js  ui.js
